# Pandamux

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  electron-builder.json  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json
.agents/skills/add-lesson/: SKILL.md
.agents/skills/add-practice/: SKILL.md
.agents/skills/agy-execute-plan/: SKILL.md
.agents/skills/agy-execute-plan-workspace/: review-iteration-1.html  review-iteration-2.html  trigger-eval.json
.agents/skills/apply-practice/: SKILL.md
.agents/skills/dependency-audit/: SKILL.md
.agents/skills/doc-sync/: SKILL.md
.agents/skills/init-repo/: SKILL.md
.agents/skills/merge-worktrees/: SKILL.md
.agents/skills/mermaid-diagram/: SKILL.md
.agents/skills/performance-review/: SKILL.md
.agents/skills/plan-repo/: SKILL.md
.agents/skills/repo-review/: SKILL.md
.agents/skills/security-scan/: SKILL.md
.agents/skills/spec-developer/: SKILL.md
.agents/skills/update-practices/: SKILL.md
.agents/skills/ux-review/: SKILL.md
.claude/: settings.json  settings.local.json.example
.claude/agent-memory/: README.md
.claude/agent-memory/builder/: MEMORY.md  feedback_skill_propagation.md
.claude/agents/: architect.md  builder.md  explorer.md  performance.md  reviewer.md  security.md  tester.md  ux-reviewer.md
.claude/references/: hooks-and-settings.md  template-sync-ignore.md  tools.md
.claude/rules/: bp-check.md  commit-changelog.md  llg-check.md
.claude/scripts/: check-changelog-staged.sh  check-commit-herestring.sh  kb-upsert.sh  post-commit-kb-contribute.sh  pre-commit-changelog-reminder.sh  pre-plan-kb-check.sh  session-start-kb-check.sh
.claude/skills/add-lesson/: SKILL.md
.claude/skills/add-practice/: SKILL.md
.claude/skills/agy-execute-plan/: SKILL.md
.claude/skills/doc-sync/: SKILL.md
.claude/skills/init-repo/: SKILL.md
.claude/skills/mermaid-diagram/: SKILL.md
.claude/skills/performance-review/: SKILL.md
.claude/skills/plan-repo/: SKILL.md
.claude/skills/repo-review/: SKILL.md
.claude/skills/security-scan/: SKILL.md
.claude/skills/spec-developer/: SKILL.md
.claude/skills/test-scaffold/: SKILL.md
.claude/skills/update-practices/: SKILL.md
.claude/skills/ux-review/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: architect.toml  builder.toml  explorer.toml  performance.toml  reviewer.toml  security.toml  tester.toml  ux-reviewer.toml
.github/workflows/: release.yml  rust.yml  winget.yml
crates/pandamux-app/: Cargo.toml  build.rs
crates/pandamux-app/src/: backend.rs  claude_context.rs  clipboard_os.rs  iced_runtime.rs  latency.rs  main.rs  persistence.rs  pipe_server.rs  pollers.rs  project_launcher.rs  updater.rs
crates/pandamux-cli/: Cargo.toml
crates/pandamux-core/: Cargo.toml
crates/pandamux-term/: Cargo.toml
crates/pandamux-term/src/: clipboard.rs  cwd.rs  grid.rs  lib.rs  links.rs  pty.rs  search.rs  session.rs  shell.rs  ssh.rs
crates/pandamux-ui/: Cargo.toml
crates/pandamux-ui/src/: chrome.rs  command_palette.rs  content_views.rs  context_menu.rs  iced_shell.rs  icons.rs  lib.rs  metrics.rs  overlays.rs  session_launcher.rs  session_panel.rs  settings.rs  shell_projection.rs  theme.rs
design_handoff_pandamux_ui/: Drag Split Panes.dc.html  PandaMUX Everywhere.dc.html  PandaMUX.dc.html  README.md
docs/: GETTING_STARTED.md  GLOSSARY.md  OVERVIEW.md  README.md  _toc.yaml  config.md
docs/_meta/: GENERATION.md  SUMMARY.md
docs/api/: CLI_REFERENCE.md
docs/core/: APP_RUNTIME.md  ARCHITECTURE.md  CONFIGURATION.md  CORE_DOMAIN.md  MAIN_PROCESS.md  RENDERER_AND_STATE.md  TERMINAL_ENGINE.md  UI_SHELL.md
docs/features/: AGENT_ORCHESTRATION.md  AI_INTEGRATION.md  BROWSER_CDP.md  NAMED_PIPE_IPC.md  SHELL_INTEGRATION.md  SSH_REMOTE.md
docs/operations/: RELEASE.md
resources/: claude-instructions.md
resources/claude-instructions/: claude-instructions.md
resources/cli/: pandamux-hook.js  pandamux.js  wmux.js
resources/opencode-plugin/: pandamux.js
resources/pandamux-orchestrator/: README.md  package.json
resources/shell-integration/: pandamux-bash-integration.sh  pandamux-powershell-integration.ps1
resources/wmux-orchestrator/: README.md  package.json
scripts/: check-rust-boundaries.ps1  gen-notification-sounds.js  take-screenshots.js
site/: i18n.js  index.html
site/docs/: index.html
site/orchestrator/: README.md  ambient.js  hero-panes.js  i18n.js  index.html  motion.js  styles.css  wave-sim.js
spikes/phase2-native-terminal/: Cargo.toml  PHASE2_REPORT.md  README.md
spikes/phase2-native-terminal/src/: gpu_render_smoke.rs  iced_terminal_viewport.rs  main.rs  pty_smoke.rs  russh_smoke.rs  term_grid.rs  text_stack.rs
src/cli/: pandamux-hook.ts  pandamux.ts
src/main/: agent-manager.ts  cdp-proxy.ts  claude-context.ts  config-loader.ts  index.ts  ipc-handlers.ts  opencode-context.ts  orchestration-watcher.ts  pipe-server.ts  pty-manager.ts  session-persistence.ts  settings-store.ts  toml-parser.ts  update-checker.ts  updater.ts  user-config.ts  v2-bridge.ts  v2-browser.ts  window-manager.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  index.tsx  notification-sound.ts  pipe-bridge.ts  vite-env.d.ts
src/shared/: id.ts  instance.ts  types.ts
src/shell-integration/: pandamux-bash-integration.sh  pandamux-cmd-integration.cmd  pandamux-powershell-integration.ps1
tasks/: 2026-07-15-ssh-project-session-launcher.md  pandemx-bug-fixes-and-peppy-goblet.md  plan-repo.md  prd-doppler-secrets.md
tests/unit/: claude-hooks.test.ts  i18n.test.ts  opencode-context.test.ts  pipe-server.test.ts  pty-teardown.test.ts  session-persistence.test.ts  updater.test.ts  user-config.test.ts
winget/: BoardPandas.PandaMUX.installer.yaml  BoardPandas.PandaMUX.locale.en-US.yaml  BoardPandas.PandaMUX.yaml  BoardPandas.wmux.installer.yaml  BoardPandas.wmux.locale.en-US.yaml  BoardPandas.wmux.yaml  README.md  amirlehmam.wmux.installer.yaml  amirlehmam.wmux.locale.en-US.yaml  amirlehmam.wmux.yaml
(+131 files in other folders)
