[package]
name = "pandamux-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arboard = "=3.6.1"
iced = { version = "=0.14.0", optional = true }
pandamux-core = { path = "../pandamux-core" }
pandamux-term = { path = "../pandamux-term" }
pandamux-ui = { path = "../pandamux-ui", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[features]
default = []
iced-runtime = ["dep:iced", "pandamux-ui/iced-runtime"]
