[package]
name = "pandamux-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arboard = "=3.6.1"
iced = { version = "=0.14.0", optional = true }
pandamux-core = { path = "../pandamux-core" }
pandamux-term = { path = "../pandamux-term" }
pandamux-ui = { path = "../pandamux-ui", default-features = false }
# In-app update check (Phase 7): a single GitHub Releases API GET. Gated to the
# GUI build via the iced-runtime feature so the headless server stays lean.
# default-tls uses the OS TLS stack (schannel on Windows), so no extra crypto
# provider or build tooling is pulled in.
reqwest = { version = "=0.13.4", default-features = false, features = [
  "default-tls",
], optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[features]
default = []
iced-runtime = ["dep:iced", "dep:reqwest", "pandamux-ui/iced-runtime"]
