[package]
name = "pandamux-term"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal = "=0.26.0"
portable-pty = "=0.9.0"
serde.workspace = true
uuid.workspace = true
# SSH remote PTY + SFTP (plan Section 6: pandamux-term owns the russh path).
# russh is pinned to the version proven in the Phase 2 spike.
russh = { version = "=0.62.2", default-features = false, features = ["ring"] }
russh-sftp = "=2.3.0"
tokio = { workspace = true, features = ["fs", "io-util", "rt-multi-thread", "time"] }
