[package]
name = "pandamux-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
iced = { version = "=0.14.0", features = ["canvas", "tokio", "advanced"], optional = true }
pandamux-core = { path = "../pandamux-core" }
pandamux-term = { path = "../pandamux-term" }

[features]
default = []
iced-runtime = ["dep:iced"]
